# patchpilot

./: .env.example  .gitignore  .safety-policy.yml  CODEBASE-patch.md  LICENSE  Makefile  README.md  bugs.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_all_checks.ps1
Patchpilot/: config.py  instructions.txt  main.py  package-lock.json  requirements.txt
Patchpilot/cli/: autocomplete.py  commands.py  display.py
Patchpilot/client/: base.py  nvidia.py
Patchpilot/context/: manager.py
Patchpilot/files/: manager.py  operations.py
Patchpilot/session/: manager.py
cli/: autocomplete.py  commands.py
client/: nvidia.py
docs/: quickstart.md
files/: manager.py  operations.py
scripts/: check.ps1  clean.py
session/: manager.py
src/: __init__.py  __main__.py  app.py  config.py
src/cli/: __init__.py  completer.py  dispatcher.py  display.py  main.py  output.py  repl.py  theme.py
src/cli/commands/: __init__.py  file.py  session.py
src/client/: __init__.py  base.py  nvidia.py  ollama.py
src/context/: __init__.py  manager.py
src/files/: __init__.py  manager.py  patching.py  readers.py  snippets.py
src/session/: __init__.py  manager.py  store.py
